--- a/src/components/ChatbotWidget/ChatMessage.module.css
+++ b/src/components/ChatbotWidget/ChatMessage.module.css
@@ -31,7 +31,7 @@
 }
 
 .botMessage .messageBubble {
-  background-color: var(--ifm-background-surface-color);
+  background-color: var(--ifm-background-color);
   color: var(--ifm-font-color-base);
   border-bottom-left-radius: 2px;
 }
